# Formal_Task_Automata_Languages

./: Builder.h  CMakeLists.txt  Coverage.sh  NKA.cpp  NKA.h  README.MD  RunTests.cpp  TestUtils.h  Tests.cpp  Tests.h  main.cpp  task14.h
code_coverage/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html
code_coverage/9/: index-sort-b.html  index-sort-f.html  index-sort-l.html  index.html  initializer_list.func-sort-c.html  initializer_list.func.html  initializer_list.gcov.html  new.func-sort-c.html  new.func.html  new.gcov.html  tuple.func-sort-c.html  tuple.func.html  tuple.gcov.html  utility.func-sort-c.html  utility.func.html  utility.gcov.html
code_coverage/9/bits/: alloc_traits.h.func-sort-c.html  alloc_traits.h.func.html  alloc_traits.h.gcov.html  allocated_ptr.h.func-sort-c.html  allocated_ptr.h.func.html  allocated_ptr.h.gcov.html  allocator.h.func-sort-c.html  allocator.h.func.html  allocator.h.gcov.html  basic_string.h.func-sort-c.html  basic_string.h.func.html  basic_string.h.gcov.html  basic_string.tcc.func-sort-c.html  basic_string.tcc.func.html  basic_string.tcc.gcov.html  char_traits.h.func-sort-c.html  char_traits.h.func.html  char_traits.h.gcov.html  cpp_type_traits.h.func-sort-c.html  cpp_type_traits.h.func.html  cpp_type_traits.h.gcov.html  deque.tcc.func-sort-c.html  deque.tcc.func.html  deque.tcc.gcov.html  functional_hash.h.func-sort-c.html  functional_hash.h.func.html  functional_hash.h.gcov.html  hashtable.h.func-sort-c.html  hashtable.h.func.html  hashtable.h.gcov.html  hashtable_policy.h.func-sort-c.html  index-sort-b.html  (+68 more)
(+70 files in other folders)
